[package]
name = "rammer"
version = "0.2.4"
authors = ["Dalton Maahs <dalton.maahs@yourbind.com>"]
edition = "2018"
description = "A Baysian Text Classifier for Spam/Ham"
license = "Beerware"
homepage = "https://github.com/dmaahs2017/rammer"
exclude = [
  "data",
  "scripts",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
unicode-segmentation = "1.7.1"
